--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
   <style>
     body { font-family: Arial, sans-serif; margin:0; background:#fff9f4; color:#333; }
     header { background:#ffd6d6; padding:60px 20px; text-align:center; }
-    header h1 { margin:0; font-size:2.6em; }
+    header h1 { margin:0; font-size:2.8em; }
     header p { font-size:1.2em; margin-top:10px; }
-    section { max-width:900px; margin:auto; padding:40px 20px; }
-    h2 { color:#e76f51; margin-bottom:10px; }
-    ul { list-style:none; padding:0; }
-    li { background:#fff; margin-bottom:12px; padding:16px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.06); }
-    footer { background:#333; color:#fff; text-align:center; padding:30px; }
-    .review { background:#fff; border-left:4px solid #ffd6d6; padding:15px; margin-bottom:15px; border-radius:6px; }
+    section { max-width:1000px; margin:auto; padding:40px 20px; }
+    h2 { color:#e76f51; margin-bottom:20px; }
+    ul { list-style:none; padding:0; display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap:20px; }
+    li { background:#fff; border-radius:12px; overflow:hidden; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
+    li img { width:100%; height:200px; object-fit:cover; }
+    li .content { padding:15px; }
+    li .content strong { font-size:1.1em; }
+    .review { background:#fff; border-left:4px solid #ffd6d6; padding:15px; margin-bottom:15px; border-radius:6px; box-shadow:0 2px 6px rgba(0,0,0,0.05); }
+    footer { background:#333; color:#fff; text-align:center; padding:30px; margin-top:40px; }
     a { color:#e76f51; text-decoration:none; }
+    iframe { width:100%; height:300px; border:0; border-radius:12px; margin-top:20px; }
     @media (max-width:600px){header h1{font-size:2em;}}
   </style>
 </head>
@@ -38,8 +42,9 @@
   <p>
     Cloudy Pancake House is a fictional café created for demo purposes.  
     Inspired by Japanese dessert culture, we focus on fluffy textures, pastel vibes,  
-    and slow-made pancakes that melt in your mouth.
+    and slow-made pancakes that melt in your mouth.  
   </p>
+  <img src="https://picsum.photos/900/300?random=1" alt="Cafe interior">
 </section>
 
 <section>
@@ -54,6 +59,7 @@
   <p>📍 123 Dream Street, Sweet City</p>
   <p>🕒 Daily: 09:00 – 18:00</p>
   <p>📸 Instagram: <a href="#">@cloudypancakehouse</a></p>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243647.217!2d-74.006!3d40.7128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQyJzQ2LjAiTiA3NMKwMDAnMDAuMCJX!5e0!3m2!1sen!2sus!4v1616589552740!5m2!1sen!2sus" allowfullscreen="" loading="lazy"></iframe>
 </section>
 
 <footer>
@@ -61,14 +67,19 @@
 </footer>
 
 <script>
-  // Load menu dynamically from menu.json
   fetch('menu.json')
     .then(res => res.json())
     .then(items => {
       const list = document.getElementById('menu');
       items.forEach(item => {
         const li = document.createElement('li');
-        li.innerHTML = `<strong>${item.name}</strong><br>${item.description}`;
+        li.innerHTML = `
+          <img src="${item.image}" alt="${item.name}">
+          <div class="content">
+            <strong>${item.name}</strong><br>
+            ${item.description}
+          </div>
+        `;
         list.appendChild(li);
       });
     })
