--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cloudy Pancake House – Soufflé Pancakes</title>
-  <meta name="description" content="Cloudy Pancake House serves light, fluffy Japanese-style soufflé pancakes.">
+  <title>Sunny Pancake Cafe – Fluffy Treats</title>
+  <meta name="description" content="Sunny Pancake Cafe serves light and fluffy Japanese-style soufflé pancakes.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    body { font-family: Arial, sans-serif; margin:0; background:#fff9f4; color:#333; }
-    header { background:#ffd6d6; padding:60px 20px; text-align:center; }
+    body { font-family: Arial, sans-serif; margin:0; background:#fff8f0; color:#333; }
+    header { background:#ffb6b9; padding:70px 20px; text-align:center; }
     header h1 { margin:0; font-size:2.8em; }
-    header p { font-size:1.2em; margin-top:10px; }
+    header p { font-size:1.3em; margin-top:10px; }
     section { max-width:1000px; margin:auto; padding:40px 20px; }
     h2 { color:#e76f51; margin-bottom:20px; }
     ul { list-style:none; padding:0; display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap:20px; }
-    li { background:#fff; border-radius:12px; overflow:hidden; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
+    li { background:#fff; border-radius:12px; overflow:hidden; box-shadow:0 4px 12px rgba(0,0,0,0.1); }
     li img { width:100%; height:200px; object-fit:cover; }
     li .content { padding:15px; }
-    li .content strong { font-size:1.1em; }
-    .review { background:#fff; border-left:4px solid #ffd6d6; padding:15px; margin-bottom:15px; border-radius:6px; box-shadow:0 2px 6px rgba(0,0,0,0.05); }
-    footer { background:#333; color:#fff; text-align:center; padding:30px; margin-top:40px; }
+    li .content strong { font-size:1.2em; }
+    .review { background:#fff; border-left:5px solid #ffb6b9; padding:20px; margin-bottom:20px; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.05); }
+    footer { background:#333; color:#fff; text-align:center; padding:40px; margin-top:40px; }
     a { color:#e76f51; text-decoration:none; }
     iframe { width:100%; height:300px; border:0; border-radius:12px; margin-top:20px; }
     @media (max-width:600px){header h1{font-size:2em;}}
@@ -28,8 +28,8 @@
 <body>
 
 <header>
-  <h1>Cloudy Pancake House</h1>
-  <p>Demo – Fluffy Japanese Soufflé Pancakes</p>
+  <h1>Sunny Pancake Cafe</h1>
+  <p>Fluffy Japanese Soufflé Pancakes – Demo Website</p>
 </header>
 
 <section>
@@ -40,30 +40,30 @@
 <section>
   <h2>About Us</h2>
   <p>
-    Cloudy Pancake House is a fictional café created for demo purposes.  
-    Inspired by Japanese dessert culture, we focus on fluffy textures, pastel vibes,  
-    and slow-made pancakes that melt in your mouth.  
+    Sunny Pancake Cafe is a fictional café created as a demo.  
+    We specialize in light, fluffy Japanese-style soufflé pancakes, colorful desserts,  
+    and a cheerful pastel interior. Perfect for brunch, treats, and Instagram photos!
   </p>
-  <img src="https://picsum.photos/900/300?random=1" alt="Cafe interior">
+  <img src="https://images.unsplash.com/photo-1584270354949-924d3d5c0a49?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDR8fHBhbmNhY2tlfGVufDB8fHx8MTY4ODQ2MTQ4NQ&ixlib=rb-4.0.3&q=80&w=900" alt="Cafe interior">
 </section>
 
 <section>
   <h2>Customer Reviews</h2>
-  <div class="review">⭐⭐⭐⭐⭐ "Absolutely unreal pancakes. Soft like clouds!"</div>
-  <div class="review">⭐⭐⭐⭐⭐ "Best brunch spot we *wish* existed."</div>
-  <div class="review">⭐⭐⭐⭐⭐ "Cute interior, friendly staff, amazing taste."</div>
+  <div class="review">⭐⭐⭐⭐⭐ "Absolutely the fluffiest pancakes ever! Super Instagrammable."</div>
+  <div class="review">⭐⭐⭐⭐⭐ "Lovely atmosphere and delicious treats. Highly recommended!"</div>
+  <div class="review">⭐⭐⭐⭐⭐ "A pastel paradise for dessert lovers."</div>
 </section>
 
 <section>
   <h2>Visit Us</h2>
-  <p>📍 123 Dream Street, Sweet City</p>
-  <p>🕒 Daily: 09:00 – 18:00</p>
-  <p>📸 Instagram: <a href="#">@cloudypancakehouse</a></p>
+  <p>📍 456 Dream Boulevard, Sweet Town</p>
+  <p>🕒 Daily: 08:00 – 20:00</p>
+  <p>📸 Instagram: <a href="#">@sunnypancakecafe</a></p>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243647.217!2d-74.006!3d40.7128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQyJzQ2LjAiTiA3NMKwMDAnMDAuMCJX!5e0!3m2!1sen!2sus!4v1616589552740!5m2!1sen!2sus" allowfullscreen="" loading="lazy"></iframe>
 </section>
 
 <footer>
-  <p>© 2026 Cloudy Pancake House – Demo Website</p>
+  <p>© 2026 Sunny Pancake Cafe – Demo Website</p>
 </footer>
 
 <script>
