--- a/index.html
+++ b/index.html
@@ -1,108 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Cloudy Pancake House – Fluffy Pancakes</title>
-  <meta name="description" content="Cloudy Pancake House serves delicious Japanese-style soufflé pancakes in a cozy atmosphere.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Cloudy Pancake House</title>
+<meta name="description" content="Cloudy Pancake House – Fluffy Japanese soufflé pancakes in a calm, cozy atmosphere.">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body { font-family: 'Arial', sans-serif; margin:0; background:#fffaf6; color:#333; }
-    a { color:#e76f51; text-decoration:none; }
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #faf8f6;
+  color: #333;
+  line-height: 1.6;
+}
 
-    /* Header */
-    header { position: relative; text-align:center; color:white; }
-    header img.banner { width:100%; height:300px; object-fit:cover; filter: brightness(0.7); }
-    header .logo { position:absolute; top:20px; left:20px; width:90px; height:90px; border-radius:50%; border:3px solid #fff; }
-    header h1 { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); font-size:3em; margin:0; }
-    header p { position:absolute; top:68%; left:50%; transform:translateX(-50%); font-size:1.3em; }
+/* HERO */
+.hero {
+  background-image: url("https://images.unsplash.com/photo-1552566626-52f8b828add9");
+  background-size: cover;
+  background-position: center;
+  padding: 100px 20px;
+  text-align: center;
+  color: white;
+  position: relative;
+}
+.hero::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0,0,0,0.45);
+}
+.hero-content {
+  position: relative;
+  z-index: 1;
+}
+.logo {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  background: #fff;
+  margin: 0 auto 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: #e76f51;
+  font-size: 18px;
+}
+.hero h1 {
+  font-size: 3em;
+  margin: 0;
+}
+.hero p {
+  font-size: 1.2em;
+  margin-top: 10px;
+}
 
-    /* Sections */
-    section { max-width:1000px; margin:auto; padding:40px 20px; }
+/* SECTIONS */
+section {
+  max-width: 1100px;
+  margin: auto;
+  padding: 60px 20px;
+}
+h2 {
+  text-align: center;
+  color: #e76f51;
+  margin-bottom: 40px;
+}
 
-    h2 { color:#e76f51; margin-bottom:20px; text-align:center; font-size:2em; }
+/* FEATURE IMAGE */
+.feature-image {
+  width: 100%;
+  border-radius: 16px;
+  margin-bottom: 50px;
+}
 
-    /* Menu */
-    ul#menu { list-style:none; padding:0; display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap:25px; }
+/* MENU */
+.menu-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 25px;
+}
+.menu-item {
+  background: white;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+}
+.menu-item img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+.menu-content {
+  padding: 18px;
+}
+.menu-content h3 {
+  margin: 0 0 6px;
+}
+.price {
+  color: #e76f51;
+  font-weight: bold;
+  margin-top: 6px;
+}
 
-    li.menu-item { background:#fff; border-radius:12px; overflow:hidden; box-shadow:0 4px 15px rgba(0,0,0,0.1); transition: transform 0.2s; }
-    li.menu-item:hover { transform: translateY(-7px); }
-    li.menu-item img { width:100%; height:220px; object-fit:cover; }
-    li.menu-item .content { padding:15px; }
-    li.menu-item .content strong { font-size:1.25em; }
-    .price { color:#e76f51; font-weight:bold; margin-top:8px; display:block; font-size:1.15em; }
+/* ABOUT */
+.about {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  align-items: center;
+}
+.about img {
+  width: 100%;
+  border-radius: 16px;
+}
 
-    /* Reviews */
-    .review { background:#fff; border-left:5px solid #ffd6d6; padding:22px; margin-bottom:20px; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.05); }
+/* REVIEWS */
+.review {
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  margin-bottom: 15px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+}
 
-    /* Footer */
-    footer { background:#333; color:#fff; text-align:center; padding:30px; margin-top:40px; }
-  </style>
+/* FOOTER */
+footer {
+  background: #333;
+  color: white;
+  text-align: center;
+  padding: 40px 20px;
+  margin-top: 60px;
+}
+
+@media (max-width: 800px) {
+  .about { grid-template-columns: 1fr; }
+  .hero h1 { font-size: 2.2em; }
+}
+</style>
 </head>
+
 <body>
 
-<header>
-  <img src="https://images.pexels.com/photos/376464/pexels-photo-376464.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="Restaurant Banner" class="banner">
-  <img src="https://images.pexels.com/photos/70497/pexels-photo-70497.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Logo" class="logo">
-  <h1>Cloudy Pancake House</h1>
-  <p>Heavenly Soufflé Pancakes – Cozy & Delicious</p>
-</header>
+<!-- HERO -->
+<div class="hero">
+  <div class="hero-content">
+    <div class="logo">CPH</div>
+    <h1>Cloudy Pancake House</h1>
+    <p>Fluffy Japanese Soufflé Pancakes</p>
+  </div>
+</div>
 
+<!-- MENU -->
 <section>
-  <h2>Our Menu</h2>
-  <img src="https://images.pexels.com/photos/376464/pexels-photo-376464.jpeg?auto=compress&cs=tinysrgb&w=1000" alt="Restaurant Interior" style="width:100%; border-radius:12px; margin-bottom:25px;">
-  <ul id="menu"></ul>
+  <h2>Our Pancakes</h2>
+  <img class="feature-image"
+       src="https://images.unsplash.com/photo-1504754524776-8f4f37790ca0"
+       alt="Restaurant interior">
+  <div id="menu" class="menu-grid"></div>
 </section>
 
+<!-- ABOUT -->
 <section>
   <h2>About Us</h2>
-  <p>
-    At <strong>Cloudy Pancake House</strong>, every pancake is made with love and care — light, airy,
-    and melt-in-your-mouth delicious. Our cozy café blends pastel comfort with sweet creativity,
-    inviting you to relax with friends, sip a perfect latte, and enjoy a stack of our signature soufflé pancakes.
-  </p>
-  <img src="https://images.pexels.com/photos/376816/pexels-photo-376816.jpeg?auto=compress&cs=tinysrgb&w=900" alt="Fluffy Pancakes" style="width:100%; border-radius:12px; margin-top:20px;">
+  <div class="about">
+    <div>
+      <p>Cloudy Pancake House is a fictional café designed as a demo website for modern, calm, and cozy brunch spots.</p>
+      <p>We specialize in Japanese soufflé pancakes, cooked slowly to achieve that perfect fluffy texture that melts in your mouth.</p>
+      <p>Our mission: comfort, quality, and a visual experience that makes guests want to return every weekend.</p>
+    </div>
+    <img src="https://images.unsplash.com/photo-1588196749597-9ff075ee6b5b" alt="Fluffy soufflé pancakes">
+  </div>
 </section>
 
+<!-- REVIEWS -->
 <section>
-  <h2>Customer Reviews</h2>
-  <div class="review">⭐⭐⭐⭐⭐ "Unbelievably soft pancakes — absolutely perfect for brunch!"</div>
-  <div class="review">⭐⭐⭐⭐⭐ "Beautiful interior and outstanding desserts."</div>
-  <div class="review">⭐⭐⭐⭐⭐ "Best pancake experience we've ever had!"</div>
+  <h2>Guest Reviews</h2>
+  <div class="review">⭐⭐⭐⭐⭐ “Soft, airy, and beautifully presented. Worth the wait.”</div>
+  <div class="review">⭐⭐⭐⭐⭐ “A calm atmosphere with the fluffiest pancakes imaginable.”</div>
+  <div class="review">⭐⭐⭐⭐⭐ “Feels like a place you want to return to every weekend.”</div>
 </section>
 
-<section>
-  <h2>Visit & Contact</h2>
-  <p>📍 123 Sweet Boulevard, Pancake City</p>
-  <p>🕒 Daily: 08:00 – 20:00</p>
-  <p>📸 Instagram: <a href="#">@cloudypancakehouse</a></p>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243647.217!2d-74.006!3d40.7128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQyJzQ2LjAiTiA3NMKwMDAnMDAuMCJX!5e0!3m2!1sen!2sus!4v1616589552740!5m2!1sen!2sus" allowfullscreen="" loading="lazy"></iframe>
-</section>
-
+<!-- FOOTER -->
 <footer>
   <p>© 2026 Cloudy Pancake House – Demo Website</p>
 </footer>
 
 <script>
-fetch('menu.json')
+fetch("menu.json")
   .then(res => res.json())
   .then(items => {
-    const list = document.getElementById('menu');
+    const menu = document.getElementById("menu");
     items.forEach(item => {
-      const li = document.createElement('li');
-      li.className = "menu-item";
-      li.innerHTML = `
+      const div = document.createElement("div");
+      div.className = "menu-item";
+      div.innerHTML = `
         <img src="${item.image}" alt="${item.name}">
-        <div class="content">
-          <strong>${item.name}</strong>
-          <span class="price">$${item.price}</span><br>
-          ${item.description}
+        <div class="menu-content">
+          <h3>${item.name}</h3>
+          <p>${item.description}</p>
+          <p class="price">${item.price}</p>
         </div>
       `;
-      list.appendChild(li);
+      menu.appendChild(div);
     });
   })
-  .catch(err => console.error('Menu could not be loaded', err));
+  .catch(err => console.error("Menu could not be loaded", err));
 </script>
 
 </body>
